syntax = "proto3";

import "google/protobuf/empty.proto";

package mail;

// The mail service definition.
service MailService {
    // Sends a mail
    rpc SendMail (SendMailRequest) returns (google.protobuf.Empty) {}

    // Sends a confirmation mail
    rpc SendConfirmMail (SendConfirmMailRequest) returns (google.protobuf.Empty) {}

    // Sends a forgot password mail
    rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty) {}
}

// The request message containing user's email, name and transporter
message SendMailRequest {
    string email = 1;
    string name = 2;
    string transporter = 3;
}

// The request message containing user's email, hash and transporter
message SendConfirmMailRequest {
    string to = 1;
    string hash = 2;
    string transporter = 3;
}

// The request message containing user's email, hash, tokenExpires, returnUrl and transporter
message ForgotPasswordRequest {
    string to = 1;
    string hash = 2;
    int64 tokenExpires = 3;
    string returnUrl = 4;
    string transporter = 5;
}

// The response message containing the status of the mail
message MailResponse {
    string message = 1;
}